[package]
name = "LastSin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dxgcap = { version = "0.2.4" }
opencv = "0.77.0"
winapi = { version = "0.3", features = ["winuser"] }
tokio = { version = "1.26.0", features = ["full"] }
[dependencies.windows]
version = "0.46.0"
features = [
    "Graphics",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Foundation",
    "Win32_Foundation",
    "Win32_Graphics",
]

